--- a/package.json
+++ b/package.json
@@ -1,55 +1,60 @@
 {
-  "name": "gatsby-typescript-tailwind",
+  "name": "gatsby-typescript-tailwind-styledcomponents",
   "private": false,
-  "description": "A gatsby starter kit using TypeScript and Tailwind CSS",
-  "version": "0.1.247",
-  "author": "Florentin Eckl <ecklf@icloud.com>",
+  "description": "A gatsby starter kit using TypeScript and Tailwind CSS and StyledComponents",
+  "version": "0.1.0",
+  "author": "MeridjaNassim <ha_meridja@esi.dz>",
   "dependencies": {
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "5.2.1"
+    "react-helmet": "6.1.0"
   },
   "devDependencies": {
-    "@types/react": "16.9.34",
-    "@types/react-dom": "16.9.6",
-    "@types/react-helmet": "5.0.15",
-    "@typescript-eslint/eslint-plugin": "2.29.0",
-    "@typescript-eslint/parser": "2.29.0",
-    "autoprefixer": "9.7.6",
+    "@types/react": "16.9.49",
+    "@types/react-dom": "16.9.8",
+    "@types/react-helmet": "6.1.0",
+    "@types/styled-components": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "4.1.0",
+    "@typescript-eslint/parser": "4.1.0",
+    "autoprefixer": "9.8.6",
     "babel-eslint": "10.1.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "cssnano": "4.1.10",
-    "gatsby": "2.20.35",
-    "gatsby-image": "2.3.5",
-    "gatsby-plugin-manifest": "2.3.7",
-    "gatsby-plugin-offline": "3.1.5",
-    "gatsby-plugin-postcss": "2.2.4",
-    "gatsby-plugin-react-helmet": "3.2.5",
-    "gatsby-plugin-sharp": "2.5.7",
-    "gatsby-plugin-typescript": "2.3.5",
-    "gatsby-source-filesystem": "2.2.5",
-    "gatsby-transformer-sharp": "2.4.7",
-    "eslint": "6.8.0",
+    "eslint": "7.9.0",
     "eslint-config-react-app": "5.2.1",
-    "eslint-loader": "3.0.4",
-    "eslint-plugin-flowtype": "4.7.0",
-    "eslint-plugin-import": "2.20.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.19.0",
-    "eslint-plugin-react-hooks": "2.5.1",
+    "eslint-loader": "4.0.2",
+    "eslint-plugin-flowtype": "5.2.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsx-a11y": "6.3.1",
+    "eslint-plugin-react": "7.20.6",
+    "eslint-plugin-react-hooks": "4.1.2",
+    "gatsby": "2.24.57",
+    "gatsby-image": "2.4.17",
     "gatsby-plugin-eslint": "2.0.8",
-    "gatsby-plugin-purgecss": "4.0.1",
-    "husky": "4.2.5",
-    "lint-staged": "10.1.7",
-    "prettier": "1.19.1",
-    "tailwindcss": "1.3.5",
-    "typescript": "3.8.3"
+    "gatsby-plugin-manifest": "2.4.28",
+    "gatsby-plugin-offline": "3.2.27",
+    "gatsby-plugin-postcss": "2.3.11",
+    "gatsby-plugin-purgecss": "5.0.0",
+    "gatsby-plugin-react-helmet": "3.3.10",
+    "gatsby-plugin-sharp": "2.6.35",
+    "gatsby-plugin-styled-components": "^3.3.10",
+    "gatsby-plugin-typescript": "2.4.19",
+    "gatsby-source-filesystem": "2.3.29",
+    "gatsby-transformer-sharp": "2.5.14",
+    "husky": "4.3.0",
+    "lint-staged": "10.3.0",
+    "prettier": "2.1.1",
+    "styled-components": "^5.2.0",
+    "tailwindcss": "1.8.9",
+    "typescript": "4.0.2"
   },
   "keywords": [
     "gatsby",
     "typescript",
     "tailwind",
     "tailwind css",
-    "starter"
+    "starter",
+    "styled-components"
   ],
   "license": "MIT",
   "scripts": {
