--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "version": "0.1.0",
   "author": "MeridjaNassim <ha_meridja@esi.dz>",
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet": "6.1.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "@types/react-helmet": "6.1.0",
