--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "MeridjaNassim <ha_meridja@esi.dz>",
   "dependencies": {
     "classnames": "^2.2.6",
+    "gatsby-plugin-next-seo": "^1.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet": "6.1.0"
+    "react-helmet-async": "^1.0.7"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
@@ -37,7 +38,6 @@
     "gatsby-plugin-offline": "3.2.27",
     "gatsby-plugin-postcss": "2.3.11",
     "gatsby-plugin-purgecss": "5.0.0",
-    "gatsby-plugin-react-helmet": "3.3.10",
     "gatsby-plugin-sharp": "2.6.35",
     "gatsby-plugin-styled-components": "^3.3.10",
     "gatsby-plugin-typescript": "2.4.19",
