--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "2.1.1",
     "styled-components": "^5.2.0",
     "tailwindcss": "1.8.9",
+    "tailwindcss-typography": "^3.1.0",
     "typescript": "4.0.2"
   },
   "keywords": [
