--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-helmet-async": "^1.0.7"
+    "react-helmet-async": "^1.0.7",
+    "react-responsive": "^8.1.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "@types/react-helmet": "6.1.0",
+    "@types/react-responsive": "^8.0.2",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "4.1.0",
     "@typescript-eslint/parser": "4.1.0",
