--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-helmet-async": "^1.0.7",
-    "react-responsive": "^8.1.0",
-    "twin.macro": "^1.10.0"
+    "react-responsive": "^8.1.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
