--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "gatsby-plugin-next-seo": "^1.6.1",
+    "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
